RESOLVED FIXED244118
RemoteImageBufferProxy::getPixelBuffer() uses too small PixelBuffer for resolutionScale() > 1 ImageBuffers
https://bugs.webkit.org/show_bug.cgi?id=244118
Summary RemoteImageBufferProxy::getPixelBuffer() uses too small PixelBuffer for resol...
Kimmo Kinnunen
Reported 2022-08-19 02:29:48 PDT
RemoteImageBufferProxy::getPixelBuffer() uses too small PixelBuffer for resolutionScale() > 1 ImageBuffers This causes GPUP write big image to the SHM and WP read small image from the SHM. Blocks bug 240056 as that makes SharedMemory more strict.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-19 02:30:14 PDT
Kimmo Kinnunen
Comment 2 2022-08-19 02:45:13 PDT
EWS
Comment 3 2022-08-22 03:38:54 PDT
Committed 253639@main (bb61b0638af6): <https://commits.webkit.org/253639@main> Reviewed commits have been landed. Closing PR #3474 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.