RemoteImageBufferProxy::getPixelBuffer() uses too small PixelBuffer for resolutionScale() > 1 ImageBuffers https://bugs.webkit.org/show_bug.cgi?id=244118 rdar://problem/98873549

Reviewed by Said Abou-Hallawa.

ImageBuffer:getPixelBuffer() is defined to return PixelBuffer of the "backend physical size"
instead of "logical size".

This would cause WP allocate PixelBuffer based on the logical size, allocate SharedMemory
of same size, but GPUP try to write the physical sized PixelBuffer to this.

This would fail the check "Shmem for return of getPixelBuffer is too small" on normal
circumstances.

However, currently this does not fire, as there are no real clients using
getPixelBuffer() with resolutionScale() != 1.

The page color sampler WebCore::sampleColor() is the only client for the scenario.
There the function will render logical 1,1 ImageBitmap scaled to deviceScaleFactor.
This would produce 4 byte PixelBuffer in WP side, but 16 byte PixelBuffer in GPUP
side. However, this failure would be masked by the SharedMemory implementation
inaccuracy where 4 byte SharedMemory would appear as 16384 size. Note: even though
the failure was masked, the result was incorrect as GPUP would write 2x2 image
and WP would read 1x1 out of the SharedMemory.

Once the inaccuracy was fixed in bug 240056, the GPUP check would fire.

Adds a ImageBuffer test that expresses the API contract as a test.
However, this test does not fail for unfixed WebKit, as the test
runs only in-process WebCore ImageBuffer variants, not the RemoteImageBufferProxy.

* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxy::getPixelBuffer const):
* Tools/TestWebKitAPI/Tests/WebCore/ImageBufferTests.cpp:
(TestWebKitAPI::imageBufferPixelIs):
(TestWebKitAPI::AnyScaleTest::deviceScaleFactor const):
(TestWebKitAPI::AnyScaleTest::imageBufferOptions const):
(TestWebKitAPI::TEST_P):

Canonical link: https://commits.webkit.org/253639@main